--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <body>
         <img id="banner" src="banner.jpg">
+        <div class="principal">
 
         <h1>Sobre a Barbearia Alura</h1>
 
@@ -22,7 +23,9 @@
 
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
         O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </div>
 
+        <div class="beneficios">
         <h2>Benefícios</h2>
 
         <ul><li class="itens">Atendimentos aos clientes</li>
@@ -30,5 +33,6 @@
            <li class="itens">Localização</li>
            <li class="itens">Profissionais qualificados</li>
          </ul>
+         </div>
     </body>
 </html>
