--- a/produtos.html
+++ b/produtos.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Produtos - Barbearia Alura</title>
+	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="produtos.css">
 </head>
 <body>
 	<header>
+		<div class="caixa">
 		<h1><img src="logo.png"></h1>
      
 	<nav>
@@ -15,7 +17,32 @@
 			<li><a href="produtos.html">Produtos</a></li>
 			<li><a href="contato.html">Contato</a></li>
 		</ul>
+	    </div>
 	</nav>
 	</header>
+
+	<main>
+		<ul>
+		<li><h2>Cabelo</h2>
+			<img src="cabelo.jpg">
+			<p> Na tesoura ou na máquina, como o cliente preferir</p>
+			<p>R$ 25,00</p>
+		</li>
+
+
+		<li><h2>Barba</h2>
+		    <img src="barba.jpg">
+			<p> Corte e desenho profissional de barba</p>
+			<p>R$ 18,00</p>
+		</li>
+
+		<li><h2>Cabelo + barba</h2>
+		    <img src="cabelo+barba.jpg">
+			<p> Pacote Completo de cabelo e barba</p>
+			<p>R$ 35,00</p>
+		</li>
+
+	</ul>
+	</main>
 </body>
 </html>
