--- a/produtos.html
+++ b/produtos.html
@@ -22,27 +22,27 @@
 	</header>
 
 	<main>
-		<ul>
+		<ul class="produtos">
 		<li><h2>Cabelo</h2>
 			<img src="cabelo.jpg">
-			<p> Na tesoura ou na máquina, como o cliente preferir</p>
-			<p>R$ 25,00</p>
+			<p class="produtodesc"> Na tesoura ou na máquina, como o cliente preferir</p>
+			<p class="produtopreco">R$ 25,00</p>
 		</li>
 
 
 		<li><h2>Barba</h2>
 		    <img src="barba.jpg">
-			<p> Corte e desenho profissional de barba</p>
-			<p>R$ 18,00</p>
+			<p class="produtodesc"> Corte e desenho profissional de barba</p>
+			<p class="produtopreco">R$ 18,00</p>
 		</li>
 
 		<li><h2>Cabelo + barba</h2>
 		    <img src="cabelo+barba.jpg">
-			<p> Pacote Completo de cabelo e barba</p>
-			<p>R$ 35,00</p>
+			<p class="produtodesc"> Pacote Completo de cabelo e barba</p>
+			<p class="produtopreco">R$ 35,00</p>
 		</li>
 
-	</ul>
+	    </ul>
 	</main>
 </body>
 </html>
